YTDB-558: tests improvement